# candle-fire

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  PRFAQ.md  README.md  app.py  config.py  llm.py  logging_config.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  tools.py
agents/: grounding.py  research_agent.py
data/extracted/: .progress.json  canonical_ids.json
data/graph/: als_graph.json
data/seeds/: manual_seeds.json
data/tools/: extract_entities.json  extract_trial_targets.json  search_landscape.json
data/trials/: trials.jsonl
extraction/: extractor.py  normalizer.py
graph/: builder.py  query.py  serializer.py
ingestion/: clinicaltrials.py  pmc.py  pubmed.py  semantic_scholar.py
normalization/: drug_vocab.py
project_proposal/: proposal.md
rag/: indexer.py  retriever.py
scripts/: build_graph.py  build_index.py  derive_seeds.py  extract_entities.py  ingest_papers.py  ingest_trials.py  refresh.py
tests/: test_grounding.py
