[project]
name = "candle-fire"
version = "0.1.0"
description = "ALS research landscape tool for physicians"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "gradio>=6.14.0,<7.0.0",
    "chromadb>=0.5.0",
    "networkx>=3.3",
    "biopython>=1.84",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.35",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app.py",
    "main.py",
    "config.py",
    "tools.py",
    "logging_config.py",
    "llm.py",
    "prompts.py",
]
